2011-01-27  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_db.php: fixed the check ACL in function
	"get_agent_modules", the global search alert fixed with this, and I think
	that fixed in other places.

2011-01-27  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/search_agents.php: refixed the order of parentheses.

2011-01-26  Sancho Lerena <slerena@artica.es>

	* ssh_console: new ssh extension (agent tab extension) it will exec a
	ssh java plugin to connect agent using it's main IP address. Requires 
	an external download (Mindterm SSH Applet), free for individual use.

	* vnc_view.php: Now uses VNC/HTTP port by default.

2011-01-26  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/status_monitor.php: fixed the ACL in the Module name for
	the select box in the filter.

	* operation/search_agents.php: fixed the ACL in the search of agent.

2011-01-26 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
	* include/functions_html.php: In print_image function checks if skin 
	path is set for the current user and if it exists add it to the image path. 
	Added pos_tree option on print_image function.

2011-01-26 Javier Lanz <javier.lanz@artica.es>

	* include/functions_custom_graphs.php: Added 'date' parameter
	* operation/reporting/reporting_viewer.php: Longer text box
	* operation/reporting/graph_viewer.php: Added date control
	* godmode/reporting/reporting_builder.preview.php: Longer text box
	* godmode/reporting/graph_builder.preview.php: Added bottom controls
	
	Pending task: #3137696


2011-01-25  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/search_results.php: added the tab to show search list for
	modules. And cleaned source code style.
	
	* operation/search_modules.php: added the page to list the searched modules.
	
	* operation/search_agents.php: cleaned source code style.

	Pending task: #3141623

2011-01-24  Miguel de Dios  <miguel.dedios@artica.es>
